Adding faker and drivers working
